<resources>
    <string name="app_name">Welcome</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_first_name">JOHN</string>
    <string name="hint_last_name">DOE</string>
    <string name="hint_email_address">JOHNDOE@GMAIL.COM</string>
    <string name="hint_password">PASSWORD</string>
    <string name="hint_confirm_password">RE-ENTER PASSWORD</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="signing_out">SIGNING OUT</string>
    <string name="signing_up">Signing up</string>
    <string name="error_email_address">Invalid Email Address</string>
    <string name="error_first_name">Please Enter First Name</string>
    <string name="error_last_name">Please Enter Last Name</string>
    <string name="error_password">Password should contain at least 6 characters</string>
    <string name="error_confirm_password">Passwords do not match</string>
    <string name="signing_in">Signing In</string>
    <string name="loading_products">Loading Products</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="available_sizes">Available Sizes</string>
    <string name="quantity">Quantity</string>
    <string name="total_price">TOTAL PRICE</string>
    <string name="loading_cart">Loading Cart</string>
    <string name="check_out">CHECK OUT</string>
    <string name="number_of_items">NO OF ITEMS</string>
    <string name="order_text">ORDER</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="error_title">Please enter a title.</string>
    <string name="error_description">Please enter a description.</string>
    <string name="add">ADD</string>
    <string name="logout">LOGOUT</string>
    <string name="login">LOGIN</string>
    <string name="hey_there_let_s_signup">HEY THERE, LET\'S SIGNUP</string>
    <string name="welcome_to_fashionista">WELCOME TO FASHIONISTA</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="enter_password">ENTER PASSWORD</string>
    <string name="re_enter_password">RE-ENTER PASSWORD</string>
    <string name="image">Image</string>
    <string name="inquiry">INQUIRY</string>
    <string name="replies">REPLIES</string>
    <string name="checkout">CHECKOUT</string>
    <string name="product_information">Product Information</string>
    <string name="contact_information">Contact Information</string>
    <string name="first_name_simple">First name</string>
    <string name="last_name_simple">Last name</string>
    <string name="address_simple">Address</string>
    <string name="city_simple">City</string>
    <string name="country_region">Country / Region</string>
    <string name="payment_information">Payment Information</string>
    <string name="card_payment">Card Payment</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="hey_there_let_s_login">HEY THERE, LET\'S LOGIN</string>
    <string name="loading">LOADING</string>
    <string name="brands">BRANDS</string>
    <string name="gender">GENDER</string>
    <string name="types">TYPES</string>
    <string name="inquiries">INQUIRIES</string>
    <string name="no_inquiries_yet_be_the_first_one_to">No inquiries yet. Be the first one to!</string>
    <string name="previous">Previous</string>
    <string name="dash">/</string>
    <string name="next">Next</string>
    <string name="add_product">ADD PRODUCT</string>
    <string name="product_brand">Product Brand</string>
    <string name="add_product_simple">Add Product</string>
    <string name="select_images">Select Images</string>
    <string name="product_images">Product Images</string>
    <string name="product_stock">Product Stock</string>
    <string name="_100">100</string>
    <string name="product_price">Product Price</string>
    <string name="_10_00">10.00</string>
    <string name="give_a_brief_description">Give a brief description.</string>
    <string name="product_description">Product Description</string>
    <string name="enter_name">Enter name</string>
    <string name="product_name">Product name</string>
    <string name="product_type">Product Type</string>
    <string name="product_gender">Product Gender</string>
    <string name="add_category">ADD CATEGORY</string>
    <string name="category_type">Category type</string>
    <string name="brand">BRAND</string>
    <string name="type">TYPE</string>
    <string name="category_name">Category name</string>
    <string name="category_description">Category Description</string>
    <string name="briefly_explain_the_category">Briefly explain the category.</string>
    <string name="category_image">Category image</string>
    <string name="select_image">Select Image</string>
    <string name="add_review">ADD REVIEW</string>
    <string name="overall_rating">Overall Rating</string>
    <string name="enter_title">Enter title</string>
    <string name="review_title">Review Title</string>
    <string name="review_description">Review Description</string>
    <string name="tell_us_what_you_think">Tell us what you think</string>
    <string name="add_inquiry">ADD INQUIRY</string>
    <string name="inquiry_title">Inquiry Title</string>
    <string name="enter_question">Enter Question</string>
    <string name="inquiry_description">Inquiry Description</string>
    <string name="explain_us_your_inquiry">Explain us your inquiry.</string>
    <string name="inquiries_are_empty">Inquiries are Empty!</string>
    <string name="name">NAME</string>
    <string name="address">ADDRESS</string>
    <string name="payment_method">PAYMENT METHOD</string>
    <string name="reviews">REVIEWS</string>
    <string name="_5_0">/ 5.0</string>
    <string name="no_reviews_yet_be_the_first_one_to">No reviews yet. Be the first one to!</string>
    <string name="search">SEARCH</string>
    <string name="a_day_ago">A Day ago</string>
    <string name="favourites_is_empty">Favourites is Empty!</string>
    <string name="search_products">SEARCH PRODUCTS</string>
    <string name="home_is_empty">Home is Empty!</string>
    <string name="orders_is_empty">Orders is Empty!</string>
    <string name="cart_is_empty">Cart is Empty!</string>
    <string name="oops_could_not_find_any_products">Oops! Could not find any products!</string>
    <string name="no_replies_yet_be_the_first_one_to">No replies yet. Be the first one to!</string>
    <string name="type_your_reply_here">Type your reply here.</string>
    <string name="reply">REPLY</string>
</resources>
