<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AddCategoryFragment"
    tools:ignore="SmallSp">

    <data>

        <import type="android.view.View" />

        <variable
            name="loading"
            type="boolean" />

        <variable
            name="image"
            type="boolean" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:letterSpacing="0.5"
                    android:text="@string/add_category"
                    android:textAppearance="?attr/textAppearanceListItemSecondary"
                    android:textSize="16sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/category_type"
                android:textSize="10sp" />

            <RadioGroup
                android:id="@+id/typeGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/typeBrand"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/size_toggle_background"
                    android:button="@null"
                    android:gravity="center"
                    android:letterSpacing="0.8"
                    android:text="@string/brand"
                    android:textSize="10sp" />

                <View
                    android:layout_width="5dp"
                    android:layout_height="match_parent" />

                <RadioButton
                    android:id="@+id/typeType"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/size_toggle_background"
                    android:button="@null"
                    android:gravity="center"
                    android:letterSpacing="0.8"
                    android:text="@string/type"
                    android:textSize="10sp" />

                <View
                    android:layout_width="5dp"
                    android:layout_height="match_parent" />

                <RadioButton
                    android:id="@+id/typeGender"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/size_toggle_background"
                    android:button="@null"
                    android:gravity="center"
                    android:letterSpacing="0.8"
                    android:text="@string/gender"
                    android:textSize="10sp" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/category_name"
                android:textSize="10sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{loading ? false : true}"
                android:hint="@string/enter_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/category_description"
                android:textSize="10sp" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{loading ? false : true}"
                android:gravity="top"
                android:hint="@string/briefly_explain_the_category"
                android:maxLines="5"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minLines="5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/category_image"
                android:textSize="10sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <Button
                android:id="@+id/addImageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:enabled="@{loading ? false : true}"
                android:text="@string/select_image" />

            <Button
                android:id="@+id/addCategoryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:enabled="@{loading ? false : true}"
                android:text="@string/add_category" />

        </LinearLayout>

    </ScrollView>

</layout>