<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.AddReviewFragment"
    tools:ignore="SmallSp">

    <data>

        <import type="android.view.View" />

        <variable
            name="product"
            type="com.shahid.fashionista_mobile.dto.response.ProductResponse" />

        <variable
            name="loading"
            type="boolean" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:letterSpacing="0.5"
                    android:text="@string/add_review"
                    android:textAppearance="?attr/textAppearanceListItemSecondary"
                    android:textSize="16sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent" />
            </LinearLayout>

            <ImageView
                android:contentDescription="@string/image"
                android:id="@+id/thumbnailImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/placeholder_img" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="20dp"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{product.name}"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceListItemSecondary"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/overall_rating"
                android:textSize="10sp" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.AppCompat.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="@{loading}"
                android:numStars="5"
                android:stepSize="0.5"
                android:theme="@style/RatingBar" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/review_title"
                android:textSize="10sp" />

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{loading ? false : true}"
                android:hint="@string/enter_title"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/review_description"
                android:textSize="10sp" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{loading ? false : true}"
                android:gravity="top"
                android:hint="@string/tell_us_what_you_think"
                android:maxLines="5"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minLines="5" />

            <Button
                android:id="@+id/addReviewButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:enabled="@{loading ? false : true}"
                android:text="@string/add_review" />

        </LinearLayout>

    </ScrollView>

</layout>